Bug 403948 - after restart, full-screen windows do not get border back after un-full-screening
Summary: after restart, full-screen windows do not get border back after un-full-scree...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.14.5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Vlad Zahorodnii
URL:
Keywords:
: 406310 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-02-05 09:21 UTC by Erik Quaeghebeur
Modified: 2019-04-09 04:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.8
Sentry Crash Report:
vlad.zahorodnii: Wayland-
vlad.zahorodnii: X11+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Erik Quaeghebeur 2019-02-05 09:21:51 UTC
SUMMARY
After restart, full-screen windows do not get their border or title bar back after un-full-screening.

STEPS TO REPRODUCE
1. Full-screen some window, e.g., for Kate, Okular, Firefox
2. Shut down and restart computer
3. Try to un-full-screen these windows

OBSERVED RESULT
Windows are un-full-screened, but lack a border or title bar, so they cannot be resized or moved (unless they support Alt+LMB on menu bar)

EXPECTED RESULT
Windows un-full-screen to normal windows that include a border and title bar

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: linux 4.14.83 with intel graphics
KDE Plasma Version: 5.14.5
KDE Frameworks Version: 5.52.0
Qt Version: 5.11.3

ADDITIONAL INFORMATION
I usually only shut down and restart my laptop when I attach an external monitor (because otherwise the system often locks up, but that is another issue).
Comment 1 Vlad Zahorodnii 2019-02-05 10:51:19 UTC
A work around: Alt+F3 > More actions > Uncheck "No Border".
Comment 2 Vlad Zahorodnii 2019-02-05 12:03:12 UTC
Git commit 64115d4de231a100adf1af7cddb9bd21604851b1 by Vlad Zagorodniy.
Committed on 05/02/2019 at 11:55.
Pushed by vladz into branch 'Plasma/5.12'.

Save the correct value of noborder property

Summary:
We can't use Client::noBorder while saving the desktop session because
the returned value is not necessarily set by the user.

Reviewers: #kwin, davidedmundson

Reviewed By: #kwin, davidedmundson

Subscribers: kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D18756

M  +6    -1    client.cpp
M  +1    -0    client.h
M  +1    -1    sm.cpp

https://commits.kde.org/kwin/64115d4de231a100adf1af7cddb9bd21604851b1
Comment 3 Vlad Zahorodnii 2019-04-09 04:58:34 UTC
*** Bug 406310 has been marked as a duplicate of this bug. ***